# tree-sitter-rdx

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  release.yml  test.yml
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rdx/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
editors/vscode/: .vscodeignore  LICENSE  README.md  language-configuration.json  package.json
editors/vscode/snippets/: rdx.json
editors/vscode/syntaxes/: rdx.tmLanguage.json
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: example.rdx
test/corpus/: attributes.txt  citations.txt  components.txt  crossrefs.txt  errors.txt  frontmatter.txt  math.txt  variables.txt
