[package]
name = "tree-sitter-rdx"
description = "Tree-sitter grammar for RDX (Reactive Document eXpressions)"
version = "0.1.0"
authors = ["Farhan Syah"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rdx"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/rdx-lang/tree-sitter-rdx"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.6"
